# FinalShelf

./: .gitignore  README.md  angular.json  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs  metadata.rs  scanner.rs  structs.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
src/app/common/: convertImgPath.ts
src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
src/app/components/toolbar/: toolbar.component.html  toolbar.component.scss  toolbar.component.ts
src/app/models/: authors.ts  books.ts
src/app/pages/author-details/: author-details.component.html  author-details.component.ts
src/app/pages/authors/: authors.component.html  authors.component.ts
src/app/pages/book-details/: book-details.component.html  book-details.component.scss  book-details.component.ts
src/app/pages/books/: books.component.html  books.component.scss  books.component.ts
src/app/pages/dashboard/: dashboard.component.html  dashboard.component.ts
src/app/pages/genres/: genres.component.html  genres.component.ts
src/app/pages/genres-details/: genres-details.component.html  genres-details.component.spec.ts  genres-details.component.ts
src/app/pages/lectors-details/: lectors-details.component.html  lectors-details.component.spec.ts  (+1 more)
src/assets/icons/: link.txt
src/styles/: _abstracts.scss  _details.scss  _gallery.scss  _mixins.scss  _reset.scss  _themes.scss  _typography.scss  main.scss
(+11 files in other folders)
